orderbook quick structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,14 +13,13 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # find_package(OpenSSL REQUIRED)
 
 # link_directories(${OPENSSL_LIBRARIES})
-
 # Main executable
 add_executable(trading_engine
     src/main.cpp
 )
 
 # Include directories
-target_include_directories(trading_engine PRIVATE)
+target_include_directories(trading_engine PRIVATE ${PROJECT_SOURCE_DIR}/include)
 
 # Link Boost and pthread
 # target_link_libraries(main PRIVATE Boost::filesystem Boost::system)
